# sql_rag_agent

./: README.md  app.py  fix_state.py  ptraite.py  pyproject.toml
.streamlit/: config.toml  secrets.toml
data/df/: elections.db  elections_clean.csv
data/processed/: Resultats.csv  elections.db  elections_clean.csv  electionsold.db
src/agent/: graph.py  llm_client.py  state.py
src/agent/few_shot_examples/: few_shot_examples.json
src/agent/nodes/: classify_intent_sql.py  execute_sql.py  generate_adapte_sql.py  generate_chart_sql.py  generate_clarification_node.py  generate_final_answer_sql.py  guardrial_node_sql.py  retrieve_similar_sql.py  verify_sql.py
src/database/: connection.py  schema.py
src/ingestion/: clean_data.py  loader.py  loader_sql.py  table_extractor.py
tests/unit/: test_classify_intent_sql.py  test_guardrail.py  test_retrieve_sql.py
ui/: menu.py  style.css
ui/pages/: chat.py  view_data.py
